Switched to reporting log likelihood

--- a/language_substring_analysis.ipynb
+++ b/language_substring_analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "22df5015-0100-413c-96fc-1c2db272ce18",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "5d1f05f7-806d-4e5f-871f-17fa0861320f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "6dade38f-a4c3-4aa4-8aca-3fa71385b71c",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "b96b88f5-d5b3-44f7-951d-95f93c275869",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "7eed0acc-8550-4522-a8bd-6cb4008eccba",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "edd74974-16fb-45ad-8c27-3ef2bc88e353",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "(182319, 20)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "0ed4fd39-08db-4981-99fc-5900c73f69a5",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "941bea24-27fc-40ba-a6f2-9bf6bc16a87d",
    "metadata": {
     "scrolled": true
@@ -287,162 +287,164 @@
      "output_type": "stream",
      "text": [
       "Language Code: ca\n",
-      "ènc, LR=7803.25\n",
-      "ènci, LR=7485.39\n",
-      "cions, LR=6531.84\n",
-      "ència, LR=6055.06\n",
-      "·l, LR=4306.88\n",
+      "ènc, log(LR)=3.89\n",
+      "ènci, log(LR)=3.87\n",
+      "cions, log(LR)=3.82\n",
+      "ència, log(LR)=3.78\n",
+      "·l, log(LR)=3.63\n",
       "----------------------------------------\n",
       "Language Code: cs\n",
-      "ě, LR=107673.45\n",
-      "ř, LR=67787.56\n",
-      "ně, LR=34549.31\n",
-      "ů, LR=30486.86\n",
-      "ře, LR=27901.66\n",
+      "ě, log(LR)=5.03\n",
+      "ř, log(LR)=4.83\n",
+      "ně, log(LR)=4.54\n",
+      "ů, log(LR)=4.48\n",
+      "ře, log(LR)=4.45\n",
       "----------------------------------------\n",
       "Language Code: da\n",
-      "øj, LR=4955.18\n",
-      "æng, LR=4426.16\n",
-      "søg, LR=4073.48\n",
-      "øge, LR=3544.45\n",
-      "skab, LR=3544.45\n",
+      "øj, log(LR)=3.70\n",
+      "æng, log(LR)=3.65\n",
+      "søg, log(LR)=3.61\n",
+      "skab, log(LR)=3.55\n",
+      "øge, log(LR)=3.55\n",
       "----------------------------------------\n",
       "Language Code: nl\n",
-      "ijk, LR=24132.53\n",
-      "lijk, LR=20778.57\n",
-      "elijk, LR=14549.79\n",
-      "voor, LR=8161.30\n",
-      "ijke, LR=8161.30\n",
+      "ijk, log(LR)=4.38\n",
+      "lijk, log(LR)=4.32\n",
+      "elijk, log(LR)=4.16\n",
+      "voor, log(LR)=3.91\n",
+      "ijke, log(LR)=3.91\n",
       "----------------------------------------\n",
       "Language Code: en\n",
-      "ally, LR=4658.52\n",
-      "tly, LR=3283.31\n",
-      "ying, LR=2595.70\n",
-      "ough, LR=2595.70\n",
-      "cted, LR=2423.80\n",
+      "ally, log(LR)=3.67\n",
+      "tly, log(LR)=3.52\n",
+      "ough, log(LR)=3.41\n",
+      "ying, log(LR)=3.41\n",
+      "cted, log(LR)=3.38\n",
       "----------------------------------------\n",
       "Language Code: fi\n",
-      "ää, LR=40651.46\n",
-      "ään, LR=15561.77\n",
-      "tää, LR=13560.75\n",
-      "ssä, LR=9866.56\n",
-      "llä, LR=9866.56\n",
+      "ää, log(LR)=4.61\n",
+      "ään, log(LR)=4.19\n",
+      "tää, log(LR)=4.13\n",
+      "ssä, log(LR)=3.99\n",
+      "llä, log(LR)=3.99\n",
       "----------------------------------------\n",
       "Language Code: fr\n",
-      "êt, LR=4872.58\n",
-      "eux, LR=4402.55\n",
-      "rése, LR=3932.53\n",
-      "dép, LR=3462.51\n",
-      "prése, LR=3149.16\n",
+      "êt, log(LR)=3.69\n",
+      "eux, log(LR)=3.64\n",
+      "rése, log(LR)=3.59\n",
+      "dép, log(LR)=3.54\n",
+      "prése, log(LR)=3.50\n",
       "----------------------------------------\n",
       "Language Code: de\n",
-      "eich, LR=7791.39\n",
-      "schl, LR=7013.81\n",
-      "tlic, LR=7013.81\n",
-      "tlich, LR=7013.81\n",
-      "ichen, LR=5769.67\n",
+      "eich, log(LR)=3.89\n",
+      "schl, log(LR)=3.85\n",
+      "tlic, log(LR)=3.85\n",
+      "tlich, log(LR)=3.85\n",
+      "ichen, log(LR)=3.76\n",
       "----------------------------------------\n",
       "Language Code: hu\n",
-      "ő, LR=47404.60\n",
-      "ű, LR=11057.11\n",
-      "gye, LR=10887.26\n",
-      "szá, LR=10377.72\n",
-      "ész, LR=9358.63\n",
+      "ő, log(LR)=4.68\n",
+      "ű, log(LR)=4.04\n",
+      "gye, log(LR)=4.04\n",
+      "szá, log(LR)=4.02\n",
+      "ész, log(LR)=3.97\n",
       "----------------------------------------\n",
       "Language Code: is\n",
-      "ð, LR=162899.59\n",
-      "ið, LR=42603.95\n",
-      "að, LR=33686.42\n",
-      "þ, LR=32776.47\n",
-      "ði, LR=30956.56\n",
+      "ð, log(LR)=5.21\n",
+      "ið, log(LR)=4.63\n",
+      "að, log(LR)=4.53\n",
+      "þ, log(LR)=4.52\n",
+      "ði, log(LR)=4.49\n",
       "----------------------------------------\n",
       "Language Code: it\n",
-      "zione, LR=18637.32\n",
-      "azion, LR=14210.77\n",
-      "aggi, LR=5815.58\n",
-      "ll', LR=5357.66\n",
-      "zioni, LR=5357.66\n",
+      "zione, log(LR)=4.27\n",
+      "azion, log(LR)=4.15\n",
+      "aggi, log(LR)=3.76\n",
+      "ll', log(LR)=3.73\n",
+      "zioni, log(LR)=3.73\n",
       "----------------------------------------\n",
       "Language Code: lv\n",
-      "ā, LR=237696.08\n",
-      "ī, LR=120191.66\n",
-      "ē, LR=94821.39\n",
-      "tā, LR=34066.27\n",
-      "nā, LR=32564.08\n",
+      "ā, log(LR)=5.38\n",
+      "ī, log(LR)=5.08\n",
+      "ē, log(LR)=4.98\n",
+      "tā, log(LR)=4.53\n",
+      "nā, log(LR)=4.51\n",
       "----------------------------------------\n",
       "Language Code: lt\n",
-      "ė, LR=95227.12\n",
-      "ų, LR=78153.61\n",
-      "ių, LR=28009.79\n",
-      "į, LR=27086.89\n",
-      "ės, LR=26625.45\n",
+      "ė, log(LR)=4.98\n",
+      "ų, log(LR)=4.89\n",
+      "ių, log(LR)=4.45\n",
+      "į, log(LR)=4.43\n",
+      "ės, log(LR)=4.43\n",
       "----------------------------------------\n",
       "Language Code: nb\n",
-      "sjon, LR=11334.15\n",
-      "asj, LR=6459.25\n",
-      "øy, LR=5762.83\n",
-      "asjo, LR=5762.83\n",
-      "asjon, LR=5762.83\n",
+      "sjon, log(LR)=4.05\n",
+      "asj, log(LR)=3.81\n",
+      "asjo, log(LR)=3.76\n",
+      "asjon, log(LR)=3.76\n",
+      "øy, log(LR)=3.76\n",
       "----------------------------------------\n",
       "Language Code: pl\n",
-      "ł, LR=101039.42\n",
-      "ś, LR=45847.79\n",
-      "ć, LR=43427.10\n",
-      "ż, LR=36326.42\n",
-      "ał, LR=29225.74\n",
+      "ł, log(LR)=5.00\n",
+      "ś, log(LR)=4.66\n",
+      "ć, log(LR)=4.64\n",
+      "ż, log(LR)=4.56\n",
+      "ał, log(LR)=4.47\n",
       "----------------------------------------\n",
       "Language Code: pt\n",
-      "ão, LR=39831.64\n",
-      "ção, LR=25323.96\n",
-      "çã, LR=25323.96\n",
-      "ação, LR=15652.18\n",
-      "açã, LR=15652.18\n",
+      "ão, log(LR)=4.60\n",
+      "ção, log(LR)=4.40\n",
+      "çã, log(LR)=4.40\n",
+      "ação, log(LR)=4.19\n",
+      "açã, log(LR)=4.19\n",
       "----------------------------------------\n",
       "Language Code: ro\n",
-      "ă, LR=151955.57\n",
-      "ț, LR=76721.94\n",
-      "ți, LR=54151.85\n",
-      "ș, LR=32563.08\n",
-      "tă, LR=29782.70\n",
+      "ă, log(LR)=5.18\n",
+      "ț, log(LR)=4.88\n",
+      "ți, log(LR)=4.73\n",
+      "ș, log(LR)=4.51\n",
+      "tă, log(LR)=4.47\n",
       "----------------------------------------\n",
       "Language Code: es\n",
-      "ción, LR=23698.10\n",
-      "ación, LR=14256.01\n",
-      "sión, LR=5278.28\n",
-      "iento, LR=5123.50\n",
-      "mient, LR=4813.92\n",
+      "ción, log(LR)=4.37\n",
+      "ación, log(LR)=4.15\n",
+      "sión, log(LR)=3.72\n",
+      "iento, log(LR)=3.71\n",
+      "mient, log(LR)=3.68\n",
       "----------------------------------------\n",
       "Language Code: sv\n",
-      "förs, LR=6009.31\n",
-      "ställ, LR=4012.26\n",
-      "stäl, LR=4012.26\n",
-      "ång, LR=3649.16\n",
-      "öra, LR=3649.16\n",
+      "förs, log(LR)=3.78\n",
+      "stäl, log(LR)=3.60\n",
+      "ställ, log(LR)=3.60\n",
+      "öra, log(LR)=3.56\n",
+      "ång, log(LR)=3.56\n",
       "----------------------------------------\n",
       "Language Code: tr\n",
-      "ı, LR=254328.60\n",
-      "ş, LR=97532.68\n",
-      "ğ, LR=51230.53\n",
-      "ın, LR=48073.56\n",
-      "lı, LR=30359.48\n",
+      "ı, log(LR)=5.41\n",
+      "ş, log(LR)=4.99\n",
+      "ğ, log(LR)=4.71\n",
+      "ın, log(LR)=4.68\n",
+      "lı, log(LR)=4.48\n",
       "----------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "log_likelihood_ratio_array = np.log10(likelihood_ratio_array)\n",
+    "\n",
     "# Loop over all languages\n",
     "for i in range(len(latin_language_keys)):\n",
     "    # Get array of substring sorted in descending order by likelihood ratio for this language\n",
-    "    indices_sorted = np.argsort(likelihood_ratio_array[:,i])[::-1]\n",
+    "    indices_sorted = np.argsort(log_likelihood_ratio_array[:,i])[::-1]\n",
     "\n",
     "    substrings_sorted = all_substrings[indices_sorted]\n",
-    "    likelihood_ratios_sorted = likelihood_ratio_array[:,i][indices_sorted]\n",
+    "    likelihood_ratios_sorted = log_likelihood_ratio_array[:,i][indices_sorted]\n",
     "\n",
     "    print(f\"Language Code: {latin_language_keys[i]}\")\n",
     "\n",
     "    # Report first 5 most likely substrings for this language and the corresponding likelihood ratio\n",
     "    for j in range(5):\n",
-    "        print(f\"{substrings_sorted[j]}, LR={likelihood_ratios_sorted[j]:.2f}\")\n",
+    "        print(f\"{substrings_sorted[j]}, log(LR)={likelihood_ratios_sorted[j]:.2f}\")\n",
     "\n",
     "    # Spacer\n",
     "    print(\"-\" * 40)"
