--- a/language_substring_analysis.ipynb
+++ b/language_substring_analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "22df5015-0100-413c-96fc-1c2db272ce18",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5d1f05f7-806d-4e5f-871f-17fa0861320f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6dade38f-a4c3-4aa4-8aca-3fa71385b71c",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b96b88f5-d5b3-44f7-951d-95f93c275869",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "7eed0acc-8550-4522-a8bd-6cb4008eccba",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "edd74974-16fb-45ad-8c27-3ef2bc88e353",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "(182319, 20)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0ed4fd39-08db-4981-99fc-5900c73f69a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = 0.1\n",
+    "alpha = 0.5\n",
     "\n",
     "# Initialize Results Array\n",
     "likelihood_ratio_array = np.empty(count_array.shape)\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "941bea24-27fc-40ba-a6f2-9bf6bc16a87d",
    "metadata": {
     "scrolled": true
@@ -287,144 +287,144 @@
      "output_type": "stream",
      "text": [
       "Language Code: ca\n",
-      "ènc, log(LR)=3.89\n",
-      "ènci, log(LR)=3.87\n",
-      "cions, log(LR)=3.82\n",
-      "ència, log(LR)=3.78\n",
-      "·l, log(LR)=3.63\n",
+      "ènc, log(LR)=3.03\n",
+      "ènci, log(LR)=3.01\n",
+      "cions, log(LR)=2.95\n",
+      "ència, log(LR)=2.92\n",
+      "atge, log(LR)=2.77\n",
       "----------------------------------------\n",
       "Language Code: cs\n",
-      "ě, log(LR)=5.03\n",
-      "ř, log(LR)=4.83\n",
-      "ně, log(LR)=4.54\n",
-      "ů, log(LR)=4.48\n",
-      "ře, log(LR)=4.45\n",
+      "ě, log(LR)=4.14\n",
+      "ř, log(LR)=3.94\n",
+      "ně, log(LR)=3.65\n",
+      "ů, log(LR)=3.59\n",
+      "ře, log(LR)=3.55\n",
       "----------------------------------------\n",
       "Language Code: da\n",
-      "øj, log(LR)=3.70\n",
-      "æng, log(LR)=3.65\n",
-      "søg, log(LR)=3.61\n",
-      "skab, log(LR)=3.55\n",
-      "øge, log(LR)=3.55\n",
+      "øj, log(LR)=2.82\n",
+      "æng, log(LR)=2.77\n",
+      "søg, log(LR)=2.73\n",
+      "skab, log(LR)=2.67\n",
+      "øge, log(LR)=2.67\n",
       "----------------------------------------\n",
       "Language Code: nl\n",
-      "ijk, log(LR)=4.38\n",
-      "lijk, log(LR)=4.32\n",
-      "elijk, log(LR)=4.16\n",
-      "voor, log(LR)=3.91\n",
-      "ijke, log(LR)=3.91\n",
+      "ijk, log(LR)=3.51\n",
+      "lijk, log(LR)=3.45\n",
+      "elijk, log(LR)=3.29\n",
+      "ijke, log(LR)=3.04\n",
+      "voor, log(LR)=3.04\n",
       "----------------------------------------\n",
       "Language Code: en\n",
-      "ally, log(LR)=3.67\n",
-      "tly, log(LR)=3.52\n",
-      "ough, log(LR)=3.41\n",
-      "ying, log(LR)=3.41\n",
-      "cted, log(LR)=3.38\n",
+      "ally, log(LR)=2.79\n",
+      "tly, log(LR)=2.64\n",
+      "ough, log(LR)=2.54\n",
+      "ying, log(LR)=2.54\n",
+      "cted, log(LR)=2.52\n",
       "----------------------------------------\n",
       "Language Code: fi\n",
-      "ää, log(LR)=4.61\n",
-      "ään, log(LR)=4.19\n",
-      "tää, log(LR)=4.13\n",
-      "ssä, log(LR)=3.99\n",
-      "llä, log(LR)=3.99\n",
+      "ää, log(LR)=3.74\n",
+      "ään, log(LR)=3.33\n",
+      "tää, log(LR)=3.27\n",
+      "llä, log(LR)=3.13\n",
+      "ssä, log(LR)=3.13\n",
       "----------------------------------------\n",
       "Language Code: fr\n",
-      "êt, log(LR)=3.69\n",
-      "eux, log(LR)=3.64\n",
-      "rése, log(LR)=3.59\n",
-      "dép, log(LR)=3.54\n",
-      "prése, log(LR)=3.50\n",
+      "êt, log(LR)=2.83\n",
+      "eux, log(LR)=2.78\n",
+      "rése, log(LR)=2.73\n",
+      "dép, log(LR)=2.68\n",
+      "prése, log(LR)=2.64\n",
       "----------------------------------------\n",
       "Language Code: de\n",
-      "eich, log(LR)=3.89\n",
-      "schl, log(LR)=3.85\n",
-      "tlic, log(LR)=3.85\n",
-      "tlich, log(LR)=3.85\n",
-      "ichen, log(LR)=3.76\n",
+      "eich, log(LR)=3.03\n",
+      "tlic, log(LR)=2.98\n",
+      "tlich, log(LR)=2.98\n",
+      "schl, log(LR)=2.98\n",
+      "ichen, log(LR)=2.90\n",
       "----------------------------------------\n",
       "Language Code: hu\n",
-      "ő, log(LR)=4.68\n",
-      "ű, log(LR)=4.04\n",
-      "gye, log(LR)=4.04\n",
-      "szá, log(LR)=4.02\n",
-      "ész, log(LR)=3.97\n",
+      "ő, log(LR)=3.80\n",
+      "ű, log(LR)=3.17\n",
+      "gye, log(LR)=3.16\n",
+      "szá, log(LR)=3.14\n",
+      "ész, log(LR)=3.09\n",
       "----------------------------------------\n",
       "Language Code: is\n",
-      "ð, log(LR)=5.21\n",
-      "ið, log(LR)=4.63\n",
-      "að, log(LR)=4.53\n",
-      "þ, log(LR)=4.52\n",
-      "ði, log(LR)=4.49\n",
+      "ð, log(LR)=4.32\n",
+      "ið, log(LR)=3.74\n",
+      "að, log(LR)=3.64\n",
+      "þ, log(LR)=3.63\n",
+      "ði, log(LR)=3.60\n",
       "----------------------------------------\n",
       "Language Code: it\n",
-      "zione, log(LR)=4.27\n",
-      "azion, log(LR)=4.15\n",
-      "aggi, log(LR)=3.76\n",
-      "ll', log(LR)=3.73\n",
-      "zioni, log(LR)=3.73\n",
+      "zione, log(LR)=3.41\n",
+      "azion, log(LR)=3.29\n",
+      "zion, log(LR)=3.07\n",
+      "aggi, log(LR)=2.90\n",
+      "zioni, log(LR)=2.87\n",
       "----------------------------------------\n",
       "Language Code: lv\n",
-      "ā, log(LR)=5.38\n",
-      "ī, log(LR)=5.08\n",
-      "ē, log(LR)=4.98\n",
-      "tā, log(LR)=4.53\n",
-      "nā, log(LR)=4.51\n",
+      "ā, log(LR)=4.50\n",
+      "ī, log(LR)=4.20\n",
+      "ē, log(LR)=4.10\n",
+      "tā, log(LR)=3.66\n",
+      "nā, log(LR)=3.64\n",
       "----------------------------------------\n",
       "Language Code: lt\n",
-      "ė, log(LR)=4.98\n",
-      "ų, log(LR)=4.89\n",
-      "ių, log(LR)=4.45\n",
-      "į, log(LR)=4.43\n",
-      "ės, log(LR)=4.43\n",
+      "ė, log(LR)=4.11\n",
+      "ų, log(LR)=4.03\n",
+      "ių, log(LR)=3.58\n",
+      "į, log(LR)=3.57\n",
+      "ės, log(LR)=3.56\n",
       "----------------------------------------\n",
       "Language Code: nb\n",
-      "sjon, log(LR)=4.05\n",
-      "asj, log(LR)=3.81\n",
-      "asjo, log(LR)=3.76\n",
-      "asjon, log(LR)=3.76\n",
-      "øy, log(LR)=3.76\n",
+      "sjon, log(LR)=3.17\n",
+      "asj, log(LR)=2.93\n",
+      "øy, log(LR)=2.88\n",
+      "asjon, log(LR)=2.88\n",
+      "asjo, log(LR)=2.88\n",
       "----------------------------------------\n",
       "Language Code: pl\n",
-      "ł, log(LR)=5.00\n",
-      "ś, log(LR)=4.66\n",
-      "ć, log(LR)=4.64\n",
-      "ż, log(LR)=4.56\n",
-      "ał, log(LR)=4.47\n",
+      "ł, log(LR)=4.13\n",
+      "ś, log(LR)=3.79\n",
+      "ć, log(LR)=3.77\n",
+      "ż, log(LR)=3.69\n",
+      "ał, log(LR)=3.59\n",
       "----------------------------------------\n",
       "Language Code: pt\n",
-      "ão, log(LR)=4.60\n",
-      "ção, log(LR)=4.40\n",
-      "çã, log(LR)=4.40\n",
-      "ação, log(LR)=4.19\n",
-      "açã, log(LR)=4.19\n",
+      "ão, log(LR)=3.73\n",
+      "çã, log(LR)=3.53\n",
+      "ção, log(LR)=3.53\n",
+      "ação, log(LR)=3.32\n",
+      "açã, log(LR)=3.32\n",
       "----------------------------------------\n",
       "Language Code: ro\n",
-      "ă, log(LR)=5.18\n",
-      "ț, log(LR)=4.88\n",
-      "ți, log(LR)=4.73\n",
-      "ș, log(LR)=4.51\n",
-      "tă, log(LR)=4.47\n",
+      "ă, log(LR)=4.31\n",
+      "ț, log(LR)=4.01\n",
+      "ți, log(LR)=3.86\n",
+      "ș, log(LR)=3.64\n",
+      "tă, log(LR)=3.60\n",
       "----------------------------------------\n",
       "Language Code: es\n",
-      "ción, log(LR)=4.37\n",
-      "ación, log(LR)=4.15\n",
-      "sión, log(LR)=3.72\n",
-      "iento, log(LR)=3.71\n",
-      "mient, log(LR)=3.68\n",
+      "ción, log(LR)=3.51\n",
+      "ación, log(LR)=3.29\n",
+      "ión, log(LR)=3.14\n",
+      "sión, log(LR)=2.86\n",
+      "iento, log(LR)=2.85\n",
       "----------------------------------------\n",
       "Language Code: sv\n",
-      "förs, log(LR)=3.78\n",
-      "stäl, log(LR)=3.60\n",
-      "ställ, log(LR)=3.60\n",
-      "öra, log(LR)=3.56\n",
-      "ång, log(LR)=3.56\n",
+      "förs, log(LR)=2.89\n",
+      "ställ, log(LR)=2.72\n",
+      "stäl, log(LR)=2.72\n",
+      "ång, log(LR)=2.68\n",
+      "öra, log(LR)=2.68\n",
       "----------------------------------------\n",
       "Language Code: tr\n",
-      "ı, log(LR)=5.41\n",
-      "ş, log(LR)=4.99\n",
-      "ğ, log(LR)=4.71\n",
-      "ın, log(LR)=4.68\n",
-      "lı, log(LR)=4.48\n",
+      "ı, log(LR)=4.52\n",
+      "ş, log(LR)=4.10\n",
+      "ğ, log(LR)=3.83\n",
+      "ın, log(LR)=3.80\n",
+      "lı, log(LR)=3.60\n",
       "----------------------------------------\n"
      ]
     }
